fixed spacings

--- a/frontend/src/style/home.css
+++ b/frontend/src/style/home.css
@@ -92,13 +92,15 @@ html , body {
 
 .book-card {
     width: 300px;
-    max-width: 350px;
-  background: #c7b198;
-  border-radius: 10px;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-  border-left: 6px solid rgba(121, 77, 52, 0.767);
-  padding: 20px;
-  transition: all 0.3s ease;
+    max-width: 300px;
+    margin-left: 20px;
+    margin-top: 20px;
+    background: #c7b198;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    border-left: 6px solid rgba(121, 77, 52, 0.767);
+    padding: 20px;
+    transition: all 0.3s ease;
 }
 
 .book-card:hover {
@@ -127,11 +129,11 @@ html , body {
     display: grid;
     justify-content: center; /* horizontal center of the grid */
     align-content: center;   /* vertical center */
-    row-gap: 50px;
-    column-gap: 50px;;
+    row-gap: 80px;
+    column-gap: 80px;;
     min-height: 95vh;        /* ensures vertical centering */
     padding: 20px;
-    padding-left: 100px;
+    padding-left: 200px;
 }
 .borrow-container .no-books {
     position:relative;
